fix: scroll overflow

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -67,3 +67,12 @@
     transform: translateX(0) !important;
   }
 }
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+html {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
